# wlclipmgr

./: .gitallow  .gitmodules  CMakeLists.txt  clipboard.cpp  clipboard.hpp  compile_commands.json  flake.nix  gpgmeinterface.cpp  gpgmeinterface.hpp  main.cpp  meson.build  procblock.cpp  procblock.hpp
.cache/clangd/index/: argparse.hpp.85C6F8FC6C42B3A9.idx  clipboard.hpp.169C41E98535E75B.idx  wlclipmgr.cpp.84CF4FDF09FF5AA6.idx
